Fix NPE when consuming messages with header fields with null values